# sympnets

./: README.md  pyproject.toml
sympnet/: data.py  force_fields.py  generate_data.py  io.py  model.py  run.py  systems.py  train.py
